# Queue_Analyser_back

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
configs/: names.json  tg_bot_menu.json  tg_bot_token.json
db/: db.db
include/: const.h  join.h  routes.h  vid_process.h  video_processors.h
lib/Handlers/: CMakeLists.txt
lib/Handlers/include/: GetQueueCountHandler.hpp
lib/Handlers/src/: GetQueueCountHandler.cpp
lib/ML/: CMakeLists.txt
lib/ML/include/: model.hpp
lib/Server/: CMakeLists.txt
lib/Server/include/: database.hpp  error.hpp  handler.hpp  listener.hpp  request.hpp  response.hpp  router.hpp  server.hpp  session.hpp
lib/Server/src/: request.cpp  response.cpp  router.cpp  server.cpp  session.cpp
lib/computer_vision/: CMakeLists.txt  README.md
lib/computer_vision/include/: CVPicProcessor.h  CamVideo.h  FileVideo.h  IVideoSource.h  VideoProcessor.h  cam_video.h  cv_pic_processor.h  file_video.h  frame_visualizer.h  i_video_source.h  model.hpp  video_processor.h
lib/computer_vision/include/computer_vision_exceptions/: cv_base_exception.h  cv_open_video_source_exc.h  file_open_exc.h  files_base_exception.h
lib/computer_vision/src/: CVPicProcessor.cpp  CamVideo.cpp  FileVideo.cpp  IVideoSource.cpp  VideoProcessor.cpp  cam_video.cpp  cv_pic_processor.cpp  file_video.cpp  frame_visualizer.cpp  i_video_source.cpp  model.cpp  video_processor.cpp
lib/computer_vision/tests/: CMakeLists.txt
lib/computer_vision/tests/src/: test_check_person.cpp
lib/database_handler/: CMakeLists.txt  README.md
lib/database_handler/database/: db.db
lib/database_handler/database/sqlite-autoconf-3410200/: config.status  libtool  sqlite3  sqlite3.pc
lib/database_handler/database/sqlite-autoconf-3410200/.deps/: sqlite3-shell.Po  sqlite3-sqlite3.Po  sqlite3.Plo
lib/database_handler/include/: api.hpp  continuous_nums_to_time_point.h  i_data_source.h  sqlite_handler.h  string_to_time_point.h
lib/database_handler/include/database_exceptions/: conversion_base_exc.h  db_access_exc.h  db_base_exception.h  invalid_format_exc.h  query_execution_exc.h  query_preparation_exc.h  reformat_exc.h
lib/database_handler/src/: api.cpp  continuous_nums_to_time_point.cpp  sqlite_handler.cpp  string_to_time_point.cpp
lib/database_handler/tests/: CMakeLists.txt
lib/database_handler/tests/src/: test_conversions.cpp
lib/server/: CMakeLists.txt  README.md
lib/server/include/: error.h  error.hpp  generateResponse.hpp  generate_response.h  generate_response.hpp  handle_request.h  handle_request.hpp  handler.hpp  listener.h  listener.hpp  parse_query_string.h  route.h  route.hpp  router.h  router.hpp  server.h  server.hpp  session.h  session.hpp  types.h
lib/server/src/: error.cpp  listener.cpp  parse_query_string.cpp  router.cpp  server.cpp  session.cpp  types.cpp
lib/server/tests/: CMakeLists.txt
lib/server/tests/src/: test_error.cpp  test_generate_response.cpp  test_parse_query_string.cpp  test_types.cpp
lib/tg_bot/: CMakeLists.txt  README.md
lib/tg_bot/include/: bot.h  bot.hpp  bot_handlers.h  creator_chouser.h  handler_creator.h  i_tg_bot.h  tg_bot.h
lib/tg_bot/include/bot_handlers/: all_data_handler.h  current_data_handler.h  i_bot_handler.h  simple_handler.h
lib/tg_bot/include/handler_creators/: all_data_creator.h  current_data_creator.h  i_handler_creator.h  simple_creator.h
lib/tg_bot/src/: bot.cpp  bot_handlers.cpp  creator_chouser.cpp  handler_creator.cpp  tg_bot.cpp
lib/tg_bot/src/bot_handlers/: all_data_handler.cpp  current_data_handler.cpp  simple_handler.cpp
lib/tg_bot/src/handler_creators/: all_data_creator.cpp  current_data_creator.cpp  simple_creator.cpp
src/: const.cpp  main.cpp  routes.cpp  server_main.cpp  tgbot_main.cpp  vid_process.cpp  video_processors.cpp
src/views/: about.html  index.html  style.css
